fix the issue of child component getting hideen behind navbar

--- a/src/components/Layout/Navbar/navbar.module.css
+++ b/src/components/Layout/Navbar/navbar.module.css
@@ -1,5 +1,4 @@
 .navbar {
-    position:fixed;
     width:100%;
     z-index:1;
 }
